--- a/index.html
+++ b/index.html
@@ -8,28 +8,32 @@
   <title>Bonjour.</title>
 </head>
 <body>
-  <div id="title">Le petit site de Christophe Sauder</div>
+  <div id="title">Projets et bizarreries</div>
   <div id="main" class="content">
     <div class="block" data-block="synth">
-      <img src="synth.png" alt="Synth">
+      <img src="med/synth.png" alt="Synth">
     </div>
     <div class="block" data-block="europe">
-      <img src="europe.png" alt="Europe">
+      <img src="med/europe.png" alt="Europe">
     </div>
     <div class="block" data-block="aocaop">
-      <img src="aocaop.png" alt="Aoc Aop">
+      <img src="med/aocaop.png" alt="Aoc Aop">
     </div>
     <div class="block" data-block="startupify">
-      <img src="startupify.png" alt="startupify">
+      <img src="med/startupify.png" alt="startupify">
     </div>
     <div class="block" data-block="pxfr">
-      <img src="pxfr.png" alt="Pixel fighting Reload">
+      <img src="med/pxfr.png" alt="Pixel fighting Reload">
     </div>
     <div class="block" data-block="chevaul">
-      <img src="chevaul.png" alt="Chevaul">
+      <img src="med/chevaul.png" alt="Chevaul">
     </div>
   </div>
-
+  <div class="footer">
+    <span class="who">christophe dot sauder at gmail dot com</span>
+    <span> - </span>
+    <span class="github"><a href="https://github.com/ponicorn">github</a></span>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
