--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <div class="block" data-block="pxfr">
       <img src="med/pxfr.png" alt="Pixel fighting Reload">
     </div>
+    <div class="block" data-block="ctrl">
+      <img src="med/ctrl.png" alt="Control from all input">
+    </div>
     <div class="block" data-block="chevaul">
       <img src="med/chevaul.png" alt="Chevaul">
     </div>
