--- a/index.html
+++ b/index.html
@@ -4,37 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style/style.css">
+  <script src="lib/vue.js"></script>
+  <!-- <script src="lib/vue.min.js"></script> -->
   <title>Bonjour.</title>
 </head>
 <body>
   <div id="title">Projets et bizarreries</div>
   <div id="main" class="content">
-    <div class="block" data-block="synth">
-      <img src="med/synth.png" alt="Synth">
-    </div>
-    <div class="block" data-block="europe">
-      <img src="med/europe.png" alt="Europe">
-    </div>
-    <div class="block" data-block="aocaop">
-      <img src="med/aocaop.png" alt="Aoc Aop">
-    </div>
-    <div class="block" data-block="startupify">
-      <img src="med/startupify.png" alt="startupify">
-    </div>
-    <div class="block" data-block="pxfr">
-      <img src="med/pxfr.png" alt="Pixel fighting Reload">
-    </div>
-    <div class="block" data-block="ctrl">
-      <img src="med/ctrl.png" alt="Control from all input">
-    </div>
-    <div class="block" data-block="chevaul">
-      <img src="med/chevaul.png" alt="Chevaul">
+    <div 
+      class="block"
+      v-for="(project,index) in projects"
+      v-bind:key="index"
+      @click="projectClick(project)">
+      <img :src="`img/${quality}/${project.name}.png`" :alt="project.name">
     </div>
   </div>
   <div class="footer">
     <span class="who">christophe dot sauder at gmail dot com</span>
   </div>
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
