--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style/style.css">
-  <script src="lib/vue.js"></script>
-  <!-- <script src="lib/vue.min.js"></script> -->
+  <!-- <script src="lib/vue.js"></script> -->
+  <script src="lib/vue.min.js"></script>
   <title>Bonjour.</title>
 </head>
 <body>
